--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
-language:
-    csharp
+os: windows
+env:
+  - MSBUILD_PATH="c:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\MSBuild\15.0\Bin"
+before:
+  - export PATH=$MSBUILD_PATH:$PATH
 
 install:
     - nuget restore cybersource-rest-samples-csharp.sln
     
 script:
-    - xbuild ./src/SampleCode.csproj
-    - chmod a+x ./src/SampleCode.exe
-    - ./src/SampleCode.exe RunAll
+    - msbuild /p:Configuration=Release cybersource-rest-samples-csharp.sln
+    - dir
