--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,12 @@ language: cpp
 env:
   - MSBUILD_PATH="c:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\MSBuild\15.0\Bin"
 before_install:
-    - dir "C:\Program Files"
-    - dir "C:\Program Files (x86)"
-    - export PATH=$MSBUILD_PATH:$PATH 
-    - Dism /online /Enable-Feature /FeatureName:NetFx4 /All
+    - dir "C:\Program Files (x86)\Microsoft Visual Studio"
+    - dir "C:\Program Files (x86)\Microsoft Visual Studio 14.0"
+    - dir "C:\Program Files (x86)\Microsoft Visual Studio 14.0\Common7\IDE"
+    - dir "C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools"
+    - export PATH=$MSBUILD_PATH:$PATH
+    - MSBuild.exe -help
 
 install:
     - nuget restore cybersource-rest-samples-csharp.sln
