--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,18 @@ language: cpp
 env:
   - MSBUILD_PATH="c:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\MSBuild\15.0\Bin"
 before_install:
+    - powershell -c "Set-ExecutionPolicy -ExecutionPolicy Unrestricted -Scope LocalMachine"
+    - powershell -c "Import-Module PackageManagement; Install-PackageProvider Nuget"
+    - powershell -c "Import-Module PackageManagement; Register-PackageSource -Name NuGetOrg -Location https://www.nuget.org/api/v2 -ProviderName NuGet"
+    - powershell -c "Import-Module PackageManagement; Install-Package -Source NuGetOrg -Name NuGet.CommandLine -Force -ExcludeVersion -Destination C:\tools"
     - dir "C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools"
     - dir "C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\VC#"
     - export PATH=$MSBUILD_PATH:$PATH
     - MSBuild.exe -help
+    - /c/tools/NuGet.CommandLine/tools/nuget sources list
 
-#install:
-#    - nuget restore cybersource-rest-samples-csharp.sln
+install:
+    - /c/tools/NuGet.CommandLine/tools/nuget restore cybersource-rest-samples-csharp.sln
     
 script:
     - dir
