--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ os: windows
 language: cpp
 env:
   - MSBUILD_PATH="c:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\MSBuild\15.0\Bin"
+  
 before_install:
     - powershell -c "Set-ExecutionPolicy -ExecutionPolicy Unrestricted -Scope LocalMachine"
     - powershell -c "Import-Module PackageManagement; Install-PackageProvider Nuget"
@@ -15,8 +16,10 @@ before_install:
 
 install:
     - /c/tools/NuGet.CommandLine/tools/nuget restore cybersource-rest-samples-csharp.sln
+
+before_script:
+    - MSBuild.exe cybersource-rest-samples-csharp.sln
+    - dir src
     
 script:
-    - dir
-    - MSBuild.exe cybersource-rest-samples-csharp.sln
-    - dir
+    - src/SampleCode.exe RunAll
