--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,11 @@ os:
     windows
     
 language: 
-    csharp
+    cpp
     
 env:
   - MSBUILD_PATH="c:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\MSBuild\15.0\Bin"
+  - NUGET_PATH="c:\tools\NuGet.CommandLine\tools"
   
 before_install:
     - powershell -c "Set-ExecutionPolicy -ExecutionPolicy Unrestricted -Scope LocalMachine"
@@ -13,9 +14,10 @@ before_install:
     - powershell -c "Import-Module PackageManagement; Register-PackageSource -Name NuGetOrg -Location https://www.nuget.org/api/v2 -ProviderName NuGet"
     - powershell -c "Import-Module PackageManagement; Install-Package -Source NuGetOrg -Name NuGet.CommandLine -Force -ExcludeVersion -Destination C:\tools"
     - export PATH=$MSBUILD_PATH:$PATH
+    - export PATH=$NUGET_PATH:$PATH
 
 install:
-    - /c/tools/NuGet.CommandLine/tools/nuget restore cybersource-rest-samples-csharp.sln
+    - nuget restore cybersource-rest-samples-csharp.sln
 
 before_script:
     - MSBuild.exe cybersource-rest-samples-csharp.sln
