--- a/.travis.yml
+++ b/.travis.yml
@@ -3,18 +3,14 @@ os:
     
 language: 
     cpp
-    
-env:
-  - MSBUILD_PATH="c:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\MSBuild\15.0\Bin"
-  - NUGET_PATH="c:\tools\NuGet.CommandLine\tools"
   
 before_install:
     - powershell -c "Set-ExecutionPolicy -ExecutionPolicy Unrestricted -Scope LocalMachine"
     - powershell -c "Import-Module PackageManagement; Install-PackageProvider Nuget"
     - powershell -c "Import-Module PackageManagement; Register-PackageSource -Name NuGetOrg -Location https://www.nuget.org/api/v2 -ProviderName NuGet"
     - powershell -c "Import-Module PackageManagement; Install-Package -Source NuGetOrg -Name NuGet.CommandLine -Force -ExcludeVersion -Destination C:\tools"
-    - export PATH=$MSBUILD_PATH:$PATH
-    - export PATH=$NUGET_PATH:$PATH
+    - export PATH="c:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\MSBuild\15.0\Bin":$PATH
+    - export PATH="c:\tools\NuGet.CommandLine\tools":$PATH
 
 install:
     - nuget restore cybersource-rest-samples-csharp.sln
